fix: usage with Metro
The import resolution algorithm in Metro neglects to try "lib/useLayoutEffect.native.js" before "lib/useLayoutEffect.js" because of a bug in the implementation.

Luckily, we can work around this by excluding the file extension in our "main" path.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-layout-effect",
   "version": "1.0.1",
-  "main": "lib/useLayoutEffect.js",
+  "main": "lib/useLayoutEffect",
   "author": "Alec Larson",
   "license": "MIT",
   "repository": "alloc/react-layout-effect",
